--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,9 @@ body {
 }
 
 .gallery__image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   object-fit: cover;
